--- a/package.json
+++ b/package.json
@@ -9,24 +9,37 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
+    "@types/js-cookie": "^3.0.2",
     "@types/node": "^16.11.46",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@types/react-query": "^1.2.9",
     "@types/react-redux": "^7.1.24",
     "@types/redux": "^3.6.0",
+    "@types/redux-logger": "^3.0.9",
     "antd": "^4.22.2",
+    "axios": "^0.27.2",
+    "axios-mock-adapter": "^1.21.1",
+    "axios-progress-bar": "^1.2.0",
     "craco-less": "^2.0.0",
     "i18next": "^21.8.16",
     "i18next-browser-languagedetector": "^6.1.4",
+    "js-cookie": "^3.0.1",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-i18next": "^11.18.3",
+    "react-intl": "^6.0.5",
+    "react-query": "3.19.0",
     "react-redux": "^8.0.2",
-    "react-router-dom": "5.2.0",
+    "react-router-dom": "^6.2.0",
     "react-scripts": "5.0.1",
+    "react-svg": "^15.1.4",
+    "react-toastify": "^9.0.7",
     "redux": "^4.2.0",
     "redux-injectors": "^2.0.0",
+    "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
     "styled-components": "5.1.0",
     "typescript": "^4.7.4",
@@ -63,5 +76,10 @@
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
     "style-loader": "^3.3.1"
-  }
+  },
+  "moduleDirectories": [
+    "node_modules",
+    "src"
+  ],
+  "proxy":"http://randomservice.com:3000"
 }
