--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,13 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "baseUrl": "src",
+    "typeRoots": [
+      "../node_modules/@types", 
+      "../@types"
+      // "../alltypes.d.ts",
+    ]
   },
   "include": [
     "src"
