--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^35.3.2",
+    "@ckeditor/ckeditor5-react": "^5.0.3",
     "@craco/craco": "^6.4.5",
     "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.4",
@@ -28,7 +30,13 @@
     "i18next-browser-languagedetector": "^6.1.4",
     "js-cookie": "^3.0.1",
     "jwt-decode": "^3.1.2",
-    "quill-better-table": "^1.2.10",
+    "ngx-quill": "^20.0.0",
+    "quill-better-table": "1.2.8",
+    "quill-blot-formatter": "^1.0.5",
+    "quill-delta": "^5.0.0",
+    "quill-image-resize-module-react": "^3.0.0",
+    "quill-table": "^1.0.0",
+    "quill-table-ui": "^1.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
@@ -38,6 +46,8 @@
     "react-intl": "^6.0.5",
     "react-query": "3.19.0",
     "react-quill": "^2.0.0",
+    "react-quill-with-table": "^1.3.3",
+    "react-quilljs": "^1.3.3",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.2.0",
     "react-scripts": "5.0.1",
