--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-i18next": "^11.18.3",
     "react-infinite-scroll-component": "^6.1.0",
     "react-intl": "^6.0.5",
+    "react-pdf": "^6.2.2",
     "react-query": "3.19.0",
     "react-quill": "^2.0.0",
     "react-quill-with-table": "^1.3.3",
