--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tinymce/tinymce-react": "^4.3.0",
     "@types/jest": "^27.5.2",
     "@types/js-cookie": "^3.0.2",
     "@types/node": "^16.11.46",
@@ -25,7 +26,7 @@
     "@types/redux": "^3.6.0",
     "@types/redux-logger": "^3.0.9",
     "antd": "^4.22.2",
-    "antd-img-crop": "^4.2.4",
+    "antd-img-crop": "^4.12.2",
     "axios": "^0.27.2",
     "axios-mock-adapter": "^1.21.1",
     "axios-progress-bar": "^1.2.0",
@@ -71,6 +72,7 @@
     "redux-saga": "^1.1.3",
     "styled-components": "5.1.0",
     "tawkto-react": "^3.0.1",
+    "tinymce-react": "^1.3.2",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
